Install timescaledb, fetch performance history and return from API
